# Wade_provenance

./: comenzi
apache-jena-fuseki-5.6.0/run/databases/provenance/Data-0001/: GPU.bpt  OSP.bpt  POS.bpt  SPO.bpt  nodes-data.bdf  nodes.bpt  prefixes-data.bdf
apache-jena-fuseki-5.6.0/run/system_files/: 2e46dd55-874a-426b-ad50-f56198ad2def
api-specification/: REST-api-documentation.md  openapi.yaml
provenance/: README.md  db.sqlite3  debug_romanian_triples.py  manage.py  pyproject.toml  requirements.txt
provenance/artworks/: apps.py  dbpedia.py  getty_enrichment.py  import_romanian.py  models.py  preload_dbpedia.py  sparql.py  urls.py  views.py
provenance/artworks/management/commands/: import_romanian.py
provenance/artworks/migrations/: 0001_initial.py  0002_artwork.py  0003_rename_created_at_dbpediaartist_fetched_at_and_more.py  0004_gettyaat_gettyulan.py  0005_artwork_image_url_dbpediaartist_image_url.py
provenance/provenance/: asgi.py  settings.py  urls.py  wsgi.py
provenance/static/js/: load_artworks.js
provenance/templates/: artworks_list.html  getty_statistics.html  romanian_heritage.html  sparql_endpoint.html  statistics.html
